# fst-training-rust-01

./: .envrc  .gitignore  .prettierignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/workflows/: audit.yaml  integration.yaml  lint.yaml  rust.yaml
dev-support/ci-bin/: dump-environment
dev-support/containers/: docker-bake.hcl
dev-support/containers/debian/: Dockerfile
dev-support/containers/scratch/: Dockerfile
dev-support/lib/: toolchain
dev-support/nix-overlay/: dev-shell.nix
docs/openapi/: api.yaml
mochi/: Cargo.toml  sqlx-data.json
mochi/migrations/: 20221017135708_init-card.down.sql  20221017135708_init-card.up.sql
mochi/sql/card/: delete_by_id.sql  get_all.sql  get_by_id.sql  insert.sql  update_by_id.sql
mochi/sql/card_linked_generic_logic/: delete_by_id.sql  get_by_card_id.sql  get_by_generic_logic_id.sql  insert.sql
mochi/src/: axum.rs  condition.rs  context.rs  env.rs  error.rs  lib.rs  response.rs  utils.rs
mochi/src/domain/entity/: card.rs  mod.rs
mochi/src/domain/model/: card.rs  logic.rs  mod.rs  user.rs
mochi/src/service/: mod.rs
mochi/src/service/persist/: card.rs  error.rs  mod.rs
mochi/src/web/: error.rs  mod.rs
mochi/src/web/controller/: mod.rs
mochi/src/web/controller/card/: mod.rs  v1.rs
mochi/src/web/controller/logic/: mod.rs  v1.rs
mochi/src/web/jwt/: claim.rs  error.rs  mod.rs
src/: lib.rs
tests/: test.rs
tools/gen-api-docs/: Cargo.toml
tools/gen-api-docs/src/: gen.rs  lib.rs  main.rs
