[package]
name = "template-rust"
version = "0.1.0"
authors = ["FST Network <dev@fstk.io>"]
edition = "2021"

repository = "https://github.com/fstnetwork/template-rust"
license-file = "LICENSE"
publish = false

autobins = false

[[bin]]
name = "template-rust"
path = "src/bin/main.rs"
doc = false

[features]
# default = [
#   "backtrace",
#   "native-tls",
# ]
# backtrace = [
#   "snafu/backtraces",
# ]
# native-tls = [
#   "sqlx/runtime-tokio-native-tls",
# ]
# rustls-tls = [
#   "sqlx/runtime-tokio-rustls",
# ]

[dependencies]
# tracing = "0.1"
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# serde = { version = "1", features = ["derive"] }
# serde_json = "1"
# serde_yaml = "0.8"

# async-trait = "0.1"
# futures = "0.3"
# tokio = { version = "1", features = ["rt-multi-thread", "signal", "sync", "time"] }
# tokio-util = { version = "0.6", features = ["io"] }

# axum = { version = "0.4", features = ["headers"] }
# hyper = "0.14"
# tower = { version = "0.4", features = ["timeout"] }
# tower-http = { version = "0.2", features = ["trace", "compression-full"] }

# ahash = "0.7"
# bytes = { version = "1", features = ["serde"] }
# lazy_static = "1"
mimalloc = "0.1"
# snafu = { version = "0.7", default-features = false, features = ["std", "futures"] }
# structopt = "0.3"
# url = { version = "2", features = ["serde"] }
# uuid = { version = "0.8", features = ["serde", "v4"] }

[dev-dependencies]

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 0
