[package]
name = "mochi"
version = "1.0.0"
authors = ["FST Network <dev@fstk.io>"]
edition = "2021"

repository = "https://github.com/chienaeae/fst-training-rust-01"
license-file = "LICENSE"
publish = false

autobins = false

[[bin]]
name = "mochi"
path = "src/bin/main.rs"
doc = false


[dependencies]
futures = "0.3"
tokio = {version = "1", features = ["rt-multi-thread"]}

axum = {version = "0.5", features = ["headers"]}
hyper = "0.14"

clap = { version = "4", features = ["derive", "env"] }
mimalloc = "0.1"
snafu = { version = "0.7", default-features = false, features = ["std", "futures"] }
