[package]
name = "mochi"
version = "1.0.0"
authors = ["FST Network <dev@fstk.io>"]
edition = "2021"

repository = "https://github.com/chienaeae/fst-training-rust-01"
license-file = "LICENSE"
publish = false

autobins = false

[[bin]]
name = "mochi"
path = "src/bin/main.rs"
doc = false


[dependencies]
schemars = { version = "0.8", features = ["chrono","uuid1"] }
serde = {version = "1", features = ["derive"]}
serde_json = "1"

futures = "0.3"
tokio = {version = "1", features = ["rt-multi-thread"]}

axum = {version = "0.5", features = ["headers"]}
hyper = "0.14"

chrono = { version = "0.4", features = ["serde"]}
clap = { version = "4", features = ["derive", "env"] }
indexmap = { version = "1", features = ["serde-1"] }
mimalloc = "0.1"
mime = "0.3"
snafu = { version = "0.7", default-features = false, features = ["std", "futures"] }
uuid = { version = "1", features = ["serde", "v4"] }
